6767
seems fixed in master:

{code}
scala> val (n, l): (String, Int) = (4, "")
<console>:7: error: type mismatch;
 found   : Int(4)
 required: String
       val (n, l): (String, Int) = (4, "")
                                    ^
<console>:7: error: type mismatch;
 found   : String("")
 required: Int
       val (n, l): (String, Int) = (4, "")
                                       ^

scala>  val (n: String, l: Int) = (4, "");
<console>:7: error: scrutinee is incompatible with pattern type;
 found   : String
 required: Int
        val (n: String, l: Int) = (4, "");
                ^
<console>:7: error: scrutinee is incompatible with pattern type;
 found   : Int
 required: String
        val (n: String, l: Int) = (4, "");
{code}
